# ClosestPointQuery_On_Mesh

./: CMakeLists.txt  ClosestPointQuery.cpp  ClosestPointQuery.h  README.md  mesh.h  test.cpp  tree.h
data/: sphere.off
